--- a/demo/Demo-test-case.ipynb
+++ b/demo/Demo-test-case.ipynb
@@ -14,6 +14,8 @@
     "\n",
     "If you haven't installed $\\texttt{Rave}$ yet, please refer to the [installation instructions](https://yinuohan.github.io/rave/) before returning to this demo. \n",
     "\n",
+    "Details of how the algorithm works are available in the paper in the link above. \n",
+    "\n",
     "Before doing anything, let's first import $\\texttt{Rave}$ and a few other useful packages:"
    ]
   },
